@@ -4,6 +4,7 @@ Changes in 2.1.4
 * FIX: afpd: Downstream fix for FreeBSD PR 148022
 * FIX: dbd: Adding a file with the CNID from it's adouble file did
        not work in case that CNID was alread occoupied in the database
+* FIX: macusers: add support for Solaris
 * NEW: cnid_metad: use a PID lockfile
 * NEW: afpd: prevent log flooding
 * UPD: dbd: ignore ".zfs" snapshot directories
